--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
